--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,27 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask-sqlalchemy = "*"
-flask-marshmallow = "*"
-flask = "*"
-marshmallow-sqlalchemy = "*"
-psycopg2 = "*"
-gunicorn = "*"
-flask-heroku = "*"
+flask-marshmallow = "==0.14.0"
+python-dateutil = "==2.8.1"
+marshmallow-sqlalchemy = "==0.24.2"
+itsdangerous = "==1.1.0"
+marshmallow = "==3.10.0"
+pycparser = "==2.20"
+six = "==1.15.0"
+Flask = "==1.1.2"
+Flask-SQLAlchemy = "==2.4.4"
+Flask-Bcrypt = "==0.7.1"
+Flask-Cors = "==3.0.10"
+Jinja2 = "==2.11.3"
+MarkupSafe = "==1.1.1"
+SQLAlchemy = "==1.3.23"
+Werkzeug = "==1.0.1"
+sendgrid = "*"
+pillow = "*"
+piexif = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
